# tcc_extraction

./: .env.example  .gitignore  .instructions.md  README.md  araucaria_sample_pipeline.py  config_example.json  daily_file_naming.py  db.py  extract_by_days_back.py  file_size_analysis.py  integrity_check.py  main.py  period_coverage.py  pipeline.py  pyproject.toml  requirements.txt  run_manifest.py  verify_output.py
docs/: daily_pipeline_integrity_plan.md  data_dictionary_sample200.md  export_and_publish_plan.md
docs/git/: git_merge,md  git_merge.md
docs/reports/: relatorio_pipeline.md
queries/: cis_araucaria_ml_extract_lightweight_alt.sql  geo_2.sql  geo_ucs.sql  geo_ucs_sem_coord.sql  geo_ucs_test_HARDCODED.sql  mdm_coluna.sql  memoria_de_massa_nio_list.sql
scripts/: araucaria_sample_pipeline.py  check_last_date.cmd  join_daily_model_input.py
src/: araucaria_sample_pipeline.py  db.py  export_manager.py  main.py  pipeline.py  run_manifest.py  weather.py
src/checks/: daily_ucs_tracker.py  extract_by_days_back.py  file_size_analysis.py  integrity_check.py  period_coverage.py
tests/: conftest.py  test_daily_file_naming.py  test_daily_ucs_tracker.py  test_extract_by_days_back.py  test_file_size_analysis.py  test_integrity_check.py  test_period_coverage.py  test_weather_integration.py
