[project]
name = "tcc-simple-pipeline"
version = "0.1.0"
description = "Daily ARAUCARIA CIS -> MDM extraction pipeline"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "oracledb>=3.4.2",
    "polars>=1.38.1",
    "pytest>=9.1.0",
    "sqlalchemy>=2.0.48",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
